--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,7 +1,7 @@
 *{
-	margin:0;
+	margin:0 auto;
 	padding:0;
-	
+	width:1012px
 	
 }
 
@@ -15,6 +15,81 @@
 #header{
 	width:100%;
 	background-color:white;
-	border-bottom:2px solid #eee;
+	
 	height:97px;
+}
+
+
+.header-top{
+	width: 1020px;
+	
+}
+
+
+#header-span{
+	font-size:12px;
+	float:left;
+	width:210px;
+	height:50px;
+}
+
+
+.navi{
+	
+	height:50px;
+	width:150px;
+}
+
+
+.nav-li{
+	float:right;
+	width:800px;
+}
+
+
+.nav a{
+	
+}
+
+
+.nav a{
+	font-size:12px;
+	text-decoration:none;
+	color:black;
+	
+}
+
+.nav li{
+	list-style: none;
+	float:left;
+	width:135px;
+	
+}
+
+.form-group{
+	width:140px;
+	float:left;
+}
+
+
+
+
+a:hover{
+	text-decoration:underline;
+}
+
+
+.search-btn{
+width:50px;
+height:50px;
+}
+
+
+
+
+#header_img{
+	height:60px;
+	width:300px;
+	margin:0 auto;
+	display: block;
 }
