topを追加しました

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -59,34 +59,36 @@
 .header-label{
 	width:260px;
 }
-
 .form-box{
 	width:260px;
 	float:left;
 }
-
 .form-group{
 	width:260px;
 	float:left;
 }
-
 a:hover{
 	text-decoration:underline;
 }
-
 .search-btn{
 width:50px;
 height:50px;
 float:left;
 }
-
 #header-img{
 	width:600px;
 	padding-left:130px;
 }
-
 #header_img{
 	height:60px;
 	width:300px;
 	margin:0 auto;
+}
+.top-title{
+	text-decoration:none;
+	color:#333;
+}
+.top-moji{
+	text-decoration:none;
+	color:#333;
 }
