--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,5 +1,5 @@
 *{
-	margin:0 auto;
+	margin:0;
 	padding:0;
 }
 
@@ -11,10 +11,10 @@
 }
 
 #header{
-	width:960px;
+	width:950px;
 	background-color:#fff;
 	height:150px;
-	
+	margin:0 auto;
 }
 
 .header-top{
@@ -49,7 +49,6 @@
 	list-style: none;
 	float:left;
 	width:135px;
-	
 }
 
 .header-bottom{
@@ -91,4 +90,38 @@ float:left;
 .top-moji{
 	text-decoration:none;
 	color:#333;
+}
+#top{
+	width:1350px;
+	height:345px;
+	background-color:#fafafa;
+	
+}
+.top-content{
+	width:300px;
+	height:300px;
+	float:left;
+	background-color:#ffffff;
+	margin:10px;
+}
+.top-image{
+	width:960px;
+	height:960px;
+	margin:0 auto;
+}
+.top-img{
+	width:300px;
+	height:195px;
+}
+.top-title{
+	font-size:16px;
+}
+.top-moji{
+	font-size:12px;
+	color:#999999;
+	list-style-type:none;
+}
+
+.top-moji-link{
+	color:#999;
 }
