--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -245,7 +245,7 @@ float:left;
 .rank-img{
 	height:75px;
 	width:75px;
-	margin:5px;
+	margin:-5px 0 5px 0;
 	float:left;
 }
 .rank{
@@ -255,31 +255,28 @@ float:left;
 	color:#000;
 	width:200px;
 	float:left;
-	margin-left:5px;
+	margin:-5px 0 0 10px;
 }
-.rank-img:after{
-	content: counter(rank-li,decimal);
-	counter-increment: rank-a;
-	color:#fff;
+.rank-number{
 	text-align:center;
 	line-height:19px;
 	width:20px;
 	height:20px;
 	background-color:#f18c1b;
 	border-radius: 20px;
-	position:absolute;
+	color:#fff;
 	top:1px;
 	left:1px;
 	padding:0;
 	display: inline-block;
 	font-size:10px;
 	border:#fff thin solid;
+	transform:translate(-8px,18px);
 	}
 .rank-li{
 	list-style:none;
-	margin:5px 0;
+	margin:0;
 	border-bottom:1px solid #eee;
-	counter-reset: rank-a;
 }
 .rank-li-a{
 	color:#9c9c9c;
